infra/k8s/service-ares.yaml
apiVersion: v1
kind: Service
metadata:
  name: ares-api
spec:
  type: ClusterIP
  selector:
    app: ares
  ports:
  - name: http
    port: 80
    targetPort: http
