infra/k8s/service-ingestion.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingestion-api
spec:
  type: ClusterIP
  selector:
    app: ingestion
  ports:
  - name: http
    port: 80
    targetPort: http
