infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redqueen-api
spec:
  type: ClusterIP
  selector:
    app: redqueen
  ports:
  - name: http
    port: 80
    targetPort: http
